compiler/tests/language/negative/oopSurfaceRoleCapability/pack/duplicateCapabilityPack.qn
pub duplicateCaps(
  ctx: HttpCtx<AuthUser, AuthUser, Session<UserSession>>
) -> bool {
  return ctx.extend.packUnique()
}
